--- a/src/languages/jp/generic.json
+++ b/src/languages/jp/generic.json
@@ -32,7 +32,7 @@
     "year": "年",
     "course": "コース",
     "topic": "トピック",
-    "problem": "**問題**",
+    "problem": "問題",
     "username": "ユーザー名",
     "nickname": "ニックネーム",
     "password": "パスワード",
