--- a/src/languages/kr/generic.json
+++ b/src/languages/kr/generic.json
@@ -32,7 +32,7 @@
     "year": "년",
     "course": "강좌",
     "topic": "주제",
-    "problem": "**문제**",
+    "problem": "문제",
     "username": "사용자 이름",
     "nickname": "별명",
     "password": "비밀번호",
