--- a/src/languages/kr/mentor.json
+++ b/src/languages/kr/mentor.json
@@ -16,10 +16,11 @@
 
     "generating_message": "문제를 생성 중입니다...\\n5~7분 정도 소요될 수 있습니다.",
     
-    "metadata_updated": "{0} 업데이트됨",
-    "metadata_problems": "객관식 문제 {0}개",
-    "metadata_aigenerated": "AI가 생성함",
-    "metadata_score": "{0}점을 받았습니다",
+    "metadata_updated": "최종 업데이트",
+    "metadata_aigenerated": "AI 생성",
+    "metadata_score": "점수",
 
-    "results_view": "결과 보기"
+    "answer_chosen": "내 답변",
+    "answer_submit_title": "제출하시겠습니까?",
+    "answer_submit_message": "다음 연습 배치까지는 답변을 다시 제출할 수 없습니다."
 }
